Fixed hover area overflow

--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ h3 {
     font-size: 20px;
 }
 
-a.copy-link {
+a.permalink-wrapper {
     height: 34px;
     width: 118px;
     vertical-align: top;
@@ -66,7 +66,7 @@ a.copy-link {
     text-decoration: none;
 }
 
-a.copy-link:hover .permalink-icon {
+a.permalink-wrapper:hover .permalink-icon {
     opacity: 1;
 }
 
@@ -84,7 +84,7 @@ a.copy-link:hover .permalink-icon {
     transition: 2s cubic-bezier(.9,.03,.69,.22);
 }
 
-.copy-link:active .copy-tooltip {
+.permalink-wrapper:active .copy-tooltip {
     opacity: 0.7;
     text-shadow: 0 0 3px rgba(255, 255, 255, 0.3);
     transition: 100ms;
